--- a/Blank Project/BlankProject.vcxproj
+++ b/Blank Project/BlankProject.vcxproj
@@ -137,9 +137,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Coursework Scene.cpp" />
+    <ClCompile Include="Orbit.cpp" />
     <ClCompile Include="Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Orbit.h" />
     <ClInclude Include="Renderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
