--- a/Blank Project/BlankProject.vcxproj.filters
+++ b/Blank Project/BlankProject.vcxproj.filters
@@ -17,9 +17,15 @@
     <ClCompile Include="Coursework Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Orbit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Orbit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
