Create SpaceRenderer, implement renderer switching

--- a/Blank Project/BlankProject.vcxproj.filters
+++ b/Blank Project/BlankProject.vcxproj.filters
@@ -20,12 +20,18 @@
     <ClCompile Include="Orbit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SpaceRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Orbit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SpaceRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
