--- a/Blank Project/BlankProject.vcxproj
+++ b/Blank Project/BlankProject.vcxproj
@@ -139,10 +139,12 @@
     <ClCompile Include="Coursework Scene.cpp" />
     <ClCompile Include="Orbit.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="SpaceRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Orbit.h" />
     <ClInclude Include="Renderer.h" />
+    <ClInclude Include="SpaceRenderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
